# log3

./: .env.example  .gitmodules  Cargo.toml  LICENSE  README.md  requests.http
cli/: Cargo.toml
cli/src/: main.rs
lambda/: Cargo.toml
lambda/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs  models.rs
src/: main.rs  models.rs  run.rs
