[package]
name = "log3-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
log3-lib = { path = "../lib" }
tokio = { version = "1", features = ["macros"] }

[[bin]]
name = "log3"
path = "src/main.rs"
