[package]
name = "log3-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
log3-lib = { path = "../lib" }
serde = "1.0.174"
serde_json = "1.0.103"
serde_repr = "0.1.16"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
